{
  "version": 4,
  "terraform_version": "0.14.11",
  "serial": 75,
  "lineage": "bdb89d8f-ff59-d50b-2828-5637dbaca81c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030452289179:security-group/sg-0ac9982a2b3809de7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ac9982a2b3809de7",
            "ingress": [],
            "name": "terraform-aws-redis-redis-20220724162551284500000001",
            "name_prefix": "terraform-aws-redis-redis-",
            "owner_id": "030452289179",
            "revoke_rules_on_delete": false,
            "tags": {
              "cost": "shared",
              "creator": "terraform",
              "git": "terraform-aws-redis"
            },
            "tags_all": {
              "cost": "shared",
              "creator": "terraform",
              "git": "terraform-aws-redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c23c912f752ac32"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ingress redis inbound rule",
            "from_port": 6379,
            "id": "sgrule-2849910420",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ac9982a2b3809de7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.this"
          ]
        }
      ]
    }
  ]
}